syntax = "proto3";
package hz.grpc;
option java_package = "org.hazelcast.grpcconnector";

service Examples {
  rpc SayHello (SimpleRequest) returns (SimpleResponse) {}            // Unary
  rpc Add (stream RequestWithValue) returns (ResponseWithValue) {}    // Client Streaming
  rpc Subscribe (SimpleRequest) returns (stream SimpleResponse) {}    // Server Streaming
  rpc Chat (stream ChatMessage) returns (stream ChatMessage) {}       // Bidirectional Streaming
}

message SimpleRequest {
  string request = 1;
}

message SimpleResponse {
  string response = 1;
}

message RequestWithValue {
  int32 inputValue = 1;
}

message ResponseWithValue {
  int32 outputValue = 1;
}

message ChatMessage {
  string senderID = 1;
  string receiverID = 2;
  string message = 3;
}